@@ -1,3 +1,7 @@
+2003-10-06  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* tkcon.tcl (dir): use %9ld instead of %9d to support large files
+
 2003-04-08  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* tkcon.tcl (::tkcon::InitUI): WinCE code to resize the window to
